--- a/meditemployee.ui
+++ b/meditemployee.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Employee editor</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
